# dtu-hsc-2024

./: .gitignore  README.md  create_speech.py  get_ir.py  high_freq.py  main.py  main1.py  main2.py  main3.py  pyproject.toml  room_derev.py  tools.py  torchDataset_tasks_['1', '2']_levels_['1', '2']_test_dataset.pt  validate_ir.py
ml-models/: UnetLightning.py  hsc_dataset.py  hugginface_model_testing.py  huggingface_model_training.py  utils.py
ml-models/research/: ML-research-Marie.md
ml-models/results/: results.md
ml-models/simple_unet/: unet_basic.py
models/linear-filter/task_1_level_1/: ir.npy
models/linear-filter/task_1_level_3/: ir.npy
models/linear-filter/task_1_level_5/: ir.npy
models/linear-filter/task_1_level_6/: ir.npy
models/linear-filter/task_1_level_7/: ir.npy
models/linear-filter/task_2_level_1/: ir.npy
models/linear-filter/task_2_level_2/: ir.npy
models/linear-filter/task_2_level_3/: ir.npy
models/linear-filter/task_3_level_1/: ir_task1.npy
papers/: karl-reading-list.md
research/results/: results.md
research/sh-files/: create_and_eval.sh  create_audio.sh  eval.sh  soren-hpc-eval.sh  soren-hpc-train.sh  train_classifier.sh  train_create_eval.sh  train_create_eval_all.sh
src/: hunga_bunga.ipynb
src/dl_models/: hugginface_model_training.py  lightning_framework.py
src/dtu_hsc_data/: __init__.py  audio.py  auto_data_loader.py  hsc_dataset.py  task_example.py
src/dtu_hsc_solutions/: __main__.py  combined_solutions.py  filtering.py  inverse_problem_based.py  solution.py
src/hsc_given_code/: evaluate.py
src/scripts/: chech_max_constraint.py  check_silence.py  evaluations.sh  get_result_csvs.py  reg_compare.py  solutions.sh
(+18 files in other folders)
